force-app/main/default/objects/Payslip__c/Payslip__c.object-meta.xml
<CustomObject>
    <label>Payslip</label>
    <nameField>
        <label>Payslip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payslips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>