force-app/main/default/objects/Payslip__c/fields/Downloaded_File__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_File__c</fullName>
    <label>Downloaded File</label>
    <length>100</length>
    <type>Text</type>
</CustomField>