force-app/main/default/objects/Payslip__c/fields/Email_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Error_Message__c</fullName>
    <description>Stores any error message encountered while generating or emailing the payslip PDF.</description>
    <inlineHelpText>Encountered error during PDF email dispatch.</inlineHelpText>
    <label>Email Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>