force-app/main/default/objects/Payslip__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the payslip PDF has been emailed to the employee to prevent duplicate dispatch.</description>
    <inlineHelpText>Checked automatically when the payslip PDF email is successfully sent.</inlineHelpText>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>