force-app/main/default/objects/Payslip__c/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <description>Timestamp when the payslip PDF was emailed to the employee.</description>
    <inlineHelpText>Date and time the payslip PDF email was sent.</inlineHelpText>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>