force-app/main/default/objects/Payslip__c/fields/Pay_Year__c.field-meta.xml
<CustomField>
    <fullName>Pay_Year__c</fullName>
    <label>Pay Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>